TramoDAOArchivo terminado. Se corrigieron errores de llamadas a los archivos.txt en los getProperty() y errores de separacion de datos en los mismos .txt